<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/first_fragment"
        android:title="@string/menu_dashboard"
        android:contentDescription="@string/menu_dashboard"
        android:icon="@drawable/ic_dashboard_white_24dp"/>

    <item
        android:id="@+id/second_fragment"
        android:title="Water Reminder"
        android:contentDescription="@string/menu_leaderboard"
        android:icon="@drawable/ic_baseline_water_drop_24"/>

    <item
        android:id="@+id/third_fragment"
        android:title="Community"
        android:contentDescription="@string/menu_store"
        android:icon="@drawable/ic_baseline_people_alt_24"/>

    <item
        android:id="@+id/fourth_fragment"
        android:title="Profile"
        android:contentDescription="@string/menu_profile"
        android:icon="@drawable/ic_person_outline_white_24dp"/>

</menu>